objects/LLC_BI__Checklist_Template__mdt.object
<CustomObject>
    <description>A Checklist Template serves as a model used to create a Checklist for a particular record.</description>
    <fields>
        <fullName>LLC_BI__Context_Type__c</fullName>
        <description>This required field contains the fully qualified name of the sObject type to which this Checklist Template pertains.  It should be copied to the Context Type field on Checklist records created from this template.</description>
        <inlineHelpText>This required field contains the fully qualified name of the sObject type to which this Checklist Template pertains.  It should be copied to the Context Type field on Checklist records created from this template.</inlineHelpText>
        <label>Context Type</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Context__c</fullName>
        <description>This required field contains the Context relationship.</description>
        <inlineHelpText>This required field contains the Context relationship.</inlineHelpText>
        <label>Context</label>
        <referenceTo>LLC_BI__Context__mdt</referenceTo>
        <relationshipLabel>Checklist Templates</relationshipLabel>
        <relationshipName>Checklist_Template</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Expected_Duration_Days__c</fullName>
        <description>This optional field contains the number of days expected to complete Checklists based on this model. It should be copied to the Expected Durations Days field on Checklist records created from this template.</description>
        <inlineHelpText>This optional field contains the number of days expected to complete Checklists based on this model. It should be copied to the Expected Durations Days field on Checklist records created from this template.</inlineHelpText>
        <label>Expected Duration Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Title__c</fullName>
        <description>This required field contains the user facing name of Checklists based on this model.  It should be copied to the Name field on Checklist records created from this template.</description>
        <inlineHelpText>This required field contains the user facing name of Checklists based on this model.  It should be copied to the Name field on Checklist records created from this template.</inlineHelpText>
        <label>Title</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Checklist Template</label>
    <pluralLabel>Checklist Templates</pluralLabel>
</CustomObject>